FilmSessions views added v1